tests/fixtures/fail/returned_borrow_missing_region.sc
let bad(borrow left: i32, borrow right: i32): borrow i32 = { borrow left }
let main(): i32 = { 42 }
